# qi-v2-qicore

./: .cursorignore  .editorconfig  .gitignore  CLAUDE.md  README.md  SETUP-API-VALIDATION.md
.claude/: README.md
.claude/commands/: build-qi-base.md  check-compatibility.md  generate-reports.md  knowledge-update-haskell.md  knowledge-update-typescript.md  test-qi-base.md
.claude/commands/general/: quality-check.md  setup-new-project.md  tech-check.md
.claude/commands/qicore/: qicore-check-compliance.md  qicore-implement-feature.md
.claude/commands/typescript/: create-unit-tests.md
.claude/knowledge/: qicore-foundation.md
.githooks/: pre-commit
cpp/docs/: qi-base-cpp.md
docs/: ENGINEERING_ETHICS_WARNING.md  VERSION_STRATEGY.md
docs/claude-code/: README.md  workflow-architecture.md
docs/claude-code/installation/: README.md  setup-guide.md  setup.simple.md  step.1-2.md  step.3.md
docs/claude-code/mcp-server/: notes.md
docs/claude-code/operation/: README.md  custom-commands.md  usage-overview.md  usage.md
docs/claude-code/reference/: design-guide.md  mcp-servers.md  solution-summary.md
docs/contracts/: qi.base.contracts.md  qi.component.contracts.md  qi.core.contracts.md  qi.v4.base.contracts.md  qi.v4.component.contracts.md  qi.v4.core.contracts.md  review.md  v-0.1.3.md
docs/impl/: haskell.impl.insights.md
docs/implementation/: typescript-from-haskell-logic.md
docs/migration/: haskell-to-typescript.md
docs/ollama/: gpu.md  model.md
docs/reviews/grok-4/: review.md
docs/setup/: haskell.md  typescript.md
docs/testing/: cross-language-strategy.md
docs/todo/: cli.md  qi-code.md  qi-prompt.md
haskell/: flake.nix  qi-base.cabal  qi-crypto-mcp.cabal  qi-foundation.cabal  qi-qicore.cabal
haskell/docs/: GHC_9_12_1_COMPATIBILITY.md  GHC_VERSION_NOTES.md  HASKELL_CONTRACTS.md  NIX_DEVELOPMENT_SETUP.md  QI_CORE_IMPLEMENTATION_PROPOSAL.md  TESTING_GUIDE_2025.md  dev.guides.md  haskell.ecosystem.v-0.2.7.proposal.md  issues.md  qi-base-haskell.md  redis.integration.md  unimplemented-features.md  v-0.2.5-impl-report.md
haskell/docs/reviews/: v.0.2.7.md
haskell/scripts/: update-haskell-ecosystem.sh
haskell/src/Qi/: Foundation.hs
haskell/src/qi/base/Qi/Base/: Error.hs  Result.hs
haskell/src/qi/core/Qi/: Core.hs
haskell/src/qi/core/Qi/Core/: Cache.hs  Config.hs  Logger.hs
haskell/test/: Main.hs  QiBaseTest.hs  QiCoreTest.hs  QiFoundationTest.hs
ollama/: DeepSeekGPU  DeepSeekGPUSmall  TypescriptExpert  comparison.sh  ollman.env
python/docs/: qi-base-python.md
scripts/: check-ghc-compatibility.sh  setup-haskell-project.sh
services/: README.md  docker-compose.yml
services/redis/: redis.conf
services/valkey/: valkey.conf
typescript/: ANTI_PATTERNS_ANALYSIS.md  ESLINT_CONTINUATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  biome.json  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  verify-base-exclusion.mjs  vitest.config.ts  vitest.properties.config.ts
typescript/.claude/commands/: validate-api-docs.md
typescript/.claude/commands/general/: commit-assist.md
typescript/.claude/commands/qicore/: qicore-design-first.md  qicore-perfect-workflow.md
typescript/.claude/commands/typescript/: implement-feature.md  quality-check.md  tech-check.md  upgrade-2025.md
typescript/.claude/knowledge/: project-stack.md
typescript/app/: README.md
typescript/app/async-composition/: README.md  package.json
typescript/app/async-composition/configs/: app.yaml
typescript/app/async-composition/src/: index.ts  services.ts  (+1 more)
typescript/app/basic-result/: README.md  package.json
typescript/app/cache-example/: README.md  package.json
typescript/app/cli-amsg-example/: README.md  package.json
typescript/app/config-example/: README.md  package.json
typescript/app/error-extension/: README.md  package.json
typescript/app/error-handling/: README.md  package.json
typescript/biome-plugins/: README.md  no-result-destructuring.grit  no-result-property-access.grit  no-result-tag-check.grit  simple-test.grit
typescript/contracts/: typescript.base.contracts.md
typescript/docs/: DESIGN_IMPROVEMENTS.md  anti-pattern-cleanup-status.md  anti-patterns-cooperation-guide.md  issues.md  proposal-comprehensive-config-app.md  qi-base-typescript.md  refactor.md  research-external-schema-solutions.md  tutorial.md  typescript.impl.proposal.md
typescript/docs/amsg/: README.md
typescript/docs/api/: README.md  base.md  cli.md
typescript/docs/base/: README.md
typescript/docs/cli-amsg/: @qi.amsg.impl.guide.md  @qi.cli.impl.guide.md  architectural.patterns.guide.md  integration-examples-guide.md
typescript/docs/core/: README.md
typescript/docs/devop/: windows.11.pro.md
typescript/docs/examples/: basic-usage.ts
typescript/docs/impl/: config.reason.md  guide.md  proposal.md  proposal.reviesed.md  usage.example.md
typescript/docs/reviews/: v-0.3.6.md
typescript/docs/tutorial/: 01-installation-setup.md  02-result-basics.md  03-error-handling.md  04-advanced-result.md  README.md  qi-base.md  qi-core-cache.md  qi-core-config.md  qi-core-logger.md  setup.md
typescript/docs/zod/: json-schema.md  v4.md
typescript/eslint-rules/: README.md  index.ts  no-result-anti-patterns.test.ts  no-result-anti-patterns.ts  package.json  tsconfig.json
typescript/eslint-rules/src/: enforce-readonly-dsl.ts  index.ts  no-imperative-try-catch.ts  no-result-anti-patterns.ts  no-throw-in-dsl.ts
typescript/lib/amsg/: package.json  tsconfig.json  tsup.config.ts
typescript/lib/base/: package.json  tsconfig.json  tsup.config.ts
typescript/lib/cli/: package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts
typescript/lib/core/: package.json  tsup.config.ts  vitest.config.ts
typescript/lib/src/: index.ts
typescript/lib/tests/: setup.ts  test-constants.ts
typescript/src/: index.ts
typescript/src/base/: error.ts  index.ts  result.ts
typescript/tests/: setup.ts
typescript/tests/base/: error.test.ts  result.test.ts
typescript/tests/properties/: applicative-laws.test.ts  functor-laws.test.ts  monad-laws.test.ts
(+165 files in other folders)
