cabal-version: 3.6
name: qi-base
version: 0.2.1
synopsis: QiCore Base Component - Result<T> and QiError Types
description: 
  Mathematical foundation types (Result<T>, QiError) for QiCore platform. 
  Provides category theory-based monadic error handling with complete
  compliance to behavioral contracts. This base component can be used
  independently or as a foundation for other QiCore components.

license: MIT
author: Qi Platform
maintainer: qi@platform.com
category: Control, System
build-type: Simple
tested-with: GHC ==9.12.1

-- Modern Haskell language settings (compatible with GHC 9.8+)
common shared-properties
  default-language: Haskell2010
  default-extensions:
    -- Essential modern extensions for GHC 9.8+
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    StrictData
    ImportQualifiedPost
    LambdaCase
    PatternSynonyms
    ScopedTypeVariables
    
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

-- QiCore Base Component - Mathematical foundations
library
  import: shared-properties
  exposed-modules:
    Qi.Base.Error
    Qi.Base.Result
  hs-source-dirs: src/qi/base
  build-depends:
    base >= 4.16 && < 5,
    text >= 1.2 && < 3,
    containers >= 0.6 && < 0.8,
    time >= 1.9 && < 2,
    aeson >= 2.0 && < 2.3,
    stm >= 2.5 && < 2.6

-- Comprehensive test suite for qi-base
test-suite qi-base-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    base,
    qi-base,
    text,
    containers,
    time,
    aeson,
    QuickCheck >= 2.14 && < 2.16,
    tasty >= 1.4 && < 1.6,
    tasty-quickcheck >= 0.10 && < 0.11
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N