cabal-version: 3.6
name: qi-crypto-mcp
version: 0.1.0.0
synopsis: QiCore Crypto MCP Platform - Mathematical Actor System in Haskell
description: 
  Mathematical actor system for cryptocurrency data processing with MCP server interface.
  Built with modern Haskell (GHC 9.10+) featuring linear types, dependent types foundation,
  and clean algebraic data types for financial data processing.

license: MIT
author: Qi Platform
maintainer: qi@platform.com
category: Finance, Cryptocurrency, MCP
build-type: Simple
tested-with: GHC ==9.10.1

-- Modern Haskell language settings
common shared-properties
  default-language: GHC2024
  default-extensions:
    -- GHC2024 includes: DataKinds, DerivingStrategies, DisambiguateRecordFields,
    -- ExplicitNamespaces, GADTs, LambdaCase, RoleAnnotations
    
    -- Additional modern extensions
    OverloadedStrings
    OverloadedRecordDot
    DeriveGeneric
    DeriveAnyClass
    StrictData
    ImportQualifiedPost
    BlockArguments
    TypeAbstractions
    LinearTypes
    
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

-- Core mathematical foundations
library qi-base
  import: shared-properties
  exposed-modules:
    Qi.Base.Error
    Qi.Base.Result
  hs-source-dirs: src/qi/base
  build-depends:
    base >= 4.19 && < 5,
    text ^>= 2.1,
    containers ^>= 0.7,
    time ^>= 1.12,
    aeson ^>= 2.2

-- Infrastructure (Config, Logger, Cache)
library qi-core
  import: shared-properties
  exposed-modules:
    Qi.Core
    Qi.Core.Config
    Qi.Core.Logger
    Qi.Core.Cache
  hs-source-dirs: src/qi/core
  build-depends:
    base,
    qi-base,
    text,
    containers,
    stm ^>= 2.5,
    time,
    aeson,
    yaml ^>= 0.11,
    filepath ^>= 1.4,
    directory ^>= 1.3,
    vector ^>= 0.13

-- Actor system DSL with mathematical combinators
library qi-dp-dsl
  import: shared-properties
  exposed-modules:
    Qi.DP.DSL.Actor
    Qi.DP.DSL.Reader
    Qi.DP.DSL.Writer
    Qi.DP.DSL.Combinator
  hs-source-dirs: src/qi/dp/dsl
  build-depends:
    base,
    qi-base,
    qi-core,
    text,
    containers,
    stm,
    time,
    aeson

-- Market data types and crypto actors
library qi-dp-market
  import: shared-properties
  exposed-modules:
    Qi.DP.Market.Types
    Qi.DP.Market.Crypto.TwelveData
    Qi.DP.Market.Crypto.Binance
    Qi.DP.Market.Crypto.CoinGecko
  hs-source-dirs: src/qi/dp/market
  build-depends:
    base,
    qi-base,
    qi-core,
    qi-dp-dsl,
    text,
    containers,
    stm,
    time,
    aeson,
    http-client ^>= 0.7,
    http-types ^>= 0.12,
    wreq ^>= 0.5

-- MCP server with actor composition
library qi-mcp-server
  import: shared-properties
  exposed-modules:
    Qi.MCP.Server
    Qi.MCP.Client
    Qi.MCP.Types
    Qi.MCP.Tools
  hs-source-dirs: src/qi/mcp
  build-depends:
    base,
    qi-base,
    qi-core,
    qi-dp-dsl,
    qi-dp-market,
    text,
    containers,
    stm,
    time,
    aeson,
    servant ^>= 0.20,
    servant-server ^>= 0.20,
    warp ^>= 3.3,
    http-client,
    http-types

-- Main MCP server executable
executable qi-crypto-mcp-server
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    qi-base,
    qi-core,
    qi-dp-dsl,
    qi-dp-market,
    qi-mcp-server,
    text
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

-- Comprehensive test suite
test-suite qi-crypto-mcp-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    base,
    qi-base,
    qi-core,
    qi-dp-dsl,
    qi-dp-market,
    qi-mcp-server,
    hspec ^>= 2.11,
    QuickCheck ^>= 2.14,
    tasty ^>= 1.5,
    tasty-hspec ^>= 1.2,
    tasty-quickcheck ^>= 0.10
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N