cabal-version: 3.6
name: qi-qicore
version: 4.0.0
synopsis: QiCore v4.0 Foundation - Result<T> and Infrastructure Services
description: 
  Mathematical foundation types (Result<T>, QiError) and essential infrastructure 
  services (Config, Logger, Cache) for QiCore v4.0 platform. This foundation
  can be used independently or as a base for other QiCore components.

license: MIT
author: Qi Platform
maintainer: qi@platform.com
category: Control, System
build-type: Simple
tested-with: GHC ==9.10.1

-- Modern Haskell language settings
common shared-properties
  default-language: GHC2024
  default-extensions:
    -- GHC2024 includes: DataKinds, DerivingStrategies, DisambiguateRecordFields,
    -- ExplicitNamespaces, GADTs, LambdaCase, RoleAnnotations
    
    -- Additional modern extensions
    OverloadedStrings
    OverloadedRecordDot
    DeriveGeneric
    DeriveAnyClass
    StrictData
    ImportQualifiedPost
    BlockArguments
    TypeAbstractions
    LinearTypes
    
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

-- Core mathematical foundations
library qi-base
  import: shared-properties
  exposed-modules:
    Qi.Base.Error
    Qi.Base.Result
  hs-source-dirs: src/qi/base
  build-depends:
    base >= 4.19 && < 5,
    text ^>= 2.1,
    containers ^>= 0.7,
    time ^>= 1.12,
    aeson ^>= 2.2

-- Infrastructure services (Config, Logger, Cache)
library qi-core
  import: shared-properties
  exposed-modules:
    Qi.Core
    Qi.Core.Config
    Qi.Core.Logger
    Qi.Core.Cache
  hs-source-dirs: src/qi/core
  build-depends:
    base,
    qi-base,
    text,
    containers,
    stm ^>= 2.5,
    time,
    aeson,
    yaml ^>= 0.11,
    filepath ^>= 1.4,
    directory ^>= 1.3,
    vector ^>= 0.13

-- Comprehensive test suite for foundation
test-suite qi-qicore-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    base,
    qi-base,
    qi-core,
    hspec ^>= 2.11,
    QuickCheck ^>= 2.14,
    tasty ^>= 1.5,
    tasty-hspec ^>= 1.2,
    tasty-quickcheck ^>= 0.10
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N